--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,3 +10,16 @@
   year={2023},
   publisher={Oxford University Press}
 }
+
+@article{Janquart_2023,
+   title={Follow-up analyses to the O3 LIGO–Virgo–KAGRA lensing searches},
+   volume={526},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/stad2909},
+   DOI={10.1093/mnras/stad2909},
+   number={3},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Janquart, J and Wright, M and Goyal, S and Chan, J C L and Ganguly, A and Garrón, Á and Keitel, D and Li, A K Y and Liu, A and Lo, R K L and Mishra, A and More, A and Phurailatpam, H and Prasia, P and Ajith, P and Biscoveanu, S and Cremonese, P and Cudell, J R and Ezquiaga, J M and Garcia-Bellido, J and Hannuksela, O A and Haris, K and Harry, I and Hendry, M and Husa, S and Kapadia, S and Li, T G F and Magaña Hernandez, I and Mukherjee, S and Seo, E and Van Den Broeck, C and Veitch, J},
+   year={2023},
+   month=sep, pages={3832–3860} }
