--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   number={3},
   pages={4149--4160},
   year={2023},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  selected={true}
 }
 
 @article{Janquart_2023,
